--- a/fbapp/templates/base.html
+++ b/fbapp/templates/base.html
@@ -13,20 +13,23 @@
     <meta property="og:title" content="Le test ultime !" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://le-test-ultime.hello-birds.com" />
-    <meta property="og:image" content="tmp/sample.jpg" />
+    <meta property="og:image" content="{{ url_for('static', filename='tmp/sample.jpg') }}" />
+
     <meta property="og:description" content="Faites le test ultime et découvrez qui vous êtes vraiment !" />
-    <meta property="fb:app_id" content="{{ config['FB_APP_ID'] }}">
+    <meta property="fb:app_id" content="{{config['FB_APP_ID']}}">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-
     <!-- Bootstrap Core CSS -->
-    <link href="{{ url_for('static', filename='css/bootstrap/bootstrap.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap/bootstrap.min.css')}}">
+
+
+
 
     <!-- Theme CSS -->
-    <link href="{{ url_for('static', filename='css/freelancer-theme.min.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{url_for('static', filename = 'css/freelancer-theme.min.css')}}">
 
     <!-- Custom CSS -->
-    <link href="{{ url_for('static', filename='css/custom.css') }}" rel="stylesheet">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
 
     <!-- Custom Fonts -->
     <script src="https://use.fontawesome.com/470b91f216.js"></script>
@@ -39,7 +42,10 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="{{ url_for('static', filename='js/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery/jquery.min.js') }}" charset="utf-8"></script>
+
+
+
 
 </head>
 
@@ -67,7 +73,12 @@
         <!-- /.container-fluid -->
     </nav>
 
-    {% block content %}{% endblock %}
+
+
+{% block content %}{% endblock %}
+
+
+
 
     <footer class="text-center">
         <div class="footer-below">
@@ -91,15 +102,26 @@
         </a>
     </div>
 
+
     <!-- Bootstrap Core JavaScript -->
-    <script src="{{ url_for('static', filename='js/bootstrap/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap/bootstrap.min.js') }}" charset="utf-8"></script>
+
 
     <!-- Plugin JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="{{ url_for('static', filename='js/freelancer-theme.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/freelancer-theme.min.js') }}" charset="utf-8"></script>
+
+
+
+
+
 
 </body>
 
 </html>
+
+
+
+
