--- a/fbapp/templates/result.html
+++ b/fbapp/templates/result.html
@@ -6,21 +6,10 @@
       <div class="container" id="maincontent" tabindex="-1">
         <div class="row">
             <div class="col-lg-6 col-lg-offset-3">
-              <div class="card">
-                <div class="row">
-                  <div class="col-sm-3 col-sm-offset-3">
-                      <img class="img-responsive img-circle user_profile" src="{{ url_for('static', filename='tmp/cover_111823112767411.jpg') }}" id="user_image">
+              
+	{% include 'card.html' %}
 
 
-                  </div>
-                  <div class="col-sm-3">
-                    <h2 id="user_name">Tom</h2>
-                  </div>
-                  <div class="col-sm-12">
-                    <p id="description">Toi, tu n'as pas peur d'être seul ! Les grands espaces et les aventures sont faits pour toi. D'ailleurs, Koh Lanta est ton émission préférée ! Bientôt tu partiras les cheveux au vent sur ton radeau. Tu es aussi un idéaliste chevronné. Quelle chance ! </p>
-                  </div>
-                </div>
-              </div>
             </div>
         </div>
         <div class="row">
